--- a/svc/hecate/src/index.html
+++ b/svc/hecate/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/moxi_full.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>NullBlock</title>
   </head>
   <body>
     <div id="root"><!--ssr-outlet--></div>
