--- a/svc/hecate/src/index.html
+++ b/svc/hecate/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/moxi_full.svg" />
+    <link rel="icon" type="image/png" href="/moxi_avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NullBlock</title>
     <!-- Add this line below to include your index.css file -->
