update(hecate): nyx_head

--- a/svc/hecate/src/index.html
+++ b/svc/hecate/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/echo_bot_night_2.png" />
+    <link rel="icon" type="image/png" href="nyx_head.png" />
+    <link rel="shortcut icon" type="image/png" href="nyx_head.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NullBlock</title>
     <!-- Add this line below to include your index.css file -->
