--- a/svc/hecate/src/index.html
+++ b/svc/hecate/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/null_logo_black.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NullBlock</title>
+    <title>Nullblock</title>
     <!-- Add this line below to include your index.css file -->
     <!-- <link rel="stylesheet" href="index.css" /> -->
 </head>
