--- a/svc/hecate/src/index.html
+++ b/svc/hecate/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/null_logo_black.ico" />
+    <link rel="icon" type="image/x-icon" href="/echo_bat.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nullblock</title>
     <!-- Add this line below to include your index.css file -->
