--- a/svc/hecate/src/index.html
+++ b/svc/hecate/src/index.html
@@ -9,17 +9,33 @@
     <!-- Add this line below to include your index.css file -->
     <!-- <link rel="stylesheet" href="index.css" /> -->
     <style>
-        /* Critical CSS to prevent white flash on load */
+        /* Critical CSS to prevent white flash on load - ALWAYS DARK */
+        * {
+            box-sizing: border-box;
+        }
+        html {
+            background-color: #0a0a0a !important;
+            color-scheme: dark !important;
+        }
         html, body {
-            background-color: #0a0a0a;
+            background-color: #0a0a0a !important;
             margin: 0;
             padding: 0;
             height: 100%;
             overflow: hidden;
+            color: rgba(255, 255, 255, 0.87);
         }
         #root {
-            background-color: #0a0a0a;
+            background-color: #0a0a0a !important;
             min-height: 100vh;
+            width: 100%;
+        }
+        /* Override any light mode preferences */
+        @media (prefers-color-scheme: light) {
+            html, body, #root {
+                background-color: #0a0a0a !important;
+                color: rgba(255, 255, 255, 0.87) !important;
+            }
         }
     </style>
 </head>
