--- a/svc/hecate/src/index.html
+++ b/svc/hecate/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #0a0a0a; margin: 0; padding: 0;">
+<html lang="en" style="background-color: transparent; margin: 0; padding: 0;">
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/nullview_favicon.ico" />
@@ -9,16 +9,16 @@
     <!-- Add this line below to include your index.css file -->
     <!-- <link rel="stylesheet" href="index.css" /> -->
     <style>
-        /* Critical CSS to prevent white flash on load - ALWAYS DARK */
+        /* Critical CSS to prevent white flash on load */
         * {
             box-sizing: border-box;
         }
         html {
-            background-color: #0a0a0a !important;
+            background-color: transparent !important;
             color-scheme: dark !important;
         }
         html, body {
-            background-color: #0a0a0a !important;
+            background-color: transparent !important;
             margin: 0;
             padding: 0;
             height: 100%;
@@ -26,21 +26,21 @@
             color: rgba(255, 255, 255, 0.87);
         }
         #root {
-            background-color: #0a0a0a !important;
+            background-color: transparent !important;
             min-height: 100vh;
             width: 100%;
         }
         /* Override any light mode preferences */
         @media (prefers-color-scheme: light) {
             html, body, #root {
-                background-color: #0a0a0a !important;
+                background-color: transparent !important;
                 color: rgba(255, 255, 255, 0.87) !important;
             }
         }
     </style>
 </head>
-<body style="background-color: #0a0a0a; margin: 0; padding: 0;">
-    <div id="root" style="background-color: #0a0a0a; min-height: 100vh;"><!--ssr-outlet--></div>
+<body style="background-color: transparent; margin: 0; padding: 0;">
+    <div id="root" style="background-color: transparent; min-height: 100vh;"><!--ssr-outlet--></div>
     <script type="module" src="/client.ts" async></script>
 </body>
 </html>
