--- a/svc/hecate/src/index.html
+++ b/svc/hecate/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en" style="background-color: transparent; margin: 0; padding: 0;">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/nullview_favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/nullview_logo.png" />
+    <link rel="icon" type="image/png" href="/nb_logo_circle_color.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/nb_logo_circle_color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nullblock</title>
     <!-- Add this line below to include your index.css file -->
